[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "testpkg"
version = "0.0.1"
description = "A tiny test pip package created for demonstration"
readme = "README.md"
authors = [
  {name = "Your Name", email = "you@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://example.org"

[tool.setuptools.packages.find]
where = ["src"]
